# kua-calculator

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  auth.ts  myfengshuihome-platform-strategy.md  next.config.ts  package-lock.json  package.json  prd.json  progress.txt  proxy.ts  pyproject.toml  render.yaml  requirements.txt  vercel.json
app/: app.py  globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
brand/: BRAND_BOOK.md
components/: AuthForm.tsx  AuthorByline.tsx  BaguaDiagram.tsx  BrandHeart.tsx  BrandMark.tsx  BuyButton.tsx  CalculatorIsland.tsx  CalculatorScripts.tsx  CartButton.tsx  CartClearer.tsx  CartContents.tsx  CartProvider.tsx  ChartPrintButton.tsx  DirectionDetailCards.tsx  DirectionTable.tsx  FlagshipChooser.tsx  FloatingWaitlistCTA.tsx  FooterSubscribe.tsx  FulfillmentBlock.tsx  GoodDaysForm.tsx  GuideLibrary.tsx  GuideNavDropdown.tsx  GuideReadState.tsx  HomeRoomPicker.tsx  InArticleCta.tsx  LeadMagnetForm.tsx  NavItems.tsx  PlannerSourceTracker.tsx  PlausibleScript.tsx  ProductCoverPreview.tsx  ProductGallery.tsx  ProductLanding.tsx  ProductPreview.tsx  RelatedArticles.tsx  SignOutButton.tsx  SiteFooter.tsx  SiteHeader.tsx  SiteSearch.tsx  SocialProof.tsx  Storefront.tsx  (+3 more)
content/: methodology.md
lib/: analytics.ts  articles.ts  bagua-svg.ts  blocks.ts  cny.ts  commerce.ts  compass-catalogue.ts  day-calendar-2026.json  day-calendar.ts  directions.ts  email-chart.ts  email-course.ts  email-delivery.ts  email-waitlist-planner-followup.ts  fulfill.ts  guide.ts  kua-element.ts  kua.ts  life-areas.ts  markdown.ts  pick-three.ts  (+14 more)
(+328 files in other folders)
